@@ -38,6 +38,7 @@
 #include "magick/studio.h"
 #include "magick/blob.h"
 #include "magick/color.h"
+#include "magick/gradient.h"
 #include "magick/magick.h"
 #include "magick/utility.h"
 #include "magick/studio.h"
