@@ -24,6 +24,9 @@
 2009-09-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/gradient.c (GradientImage): Moved from image.c to new
+        gradient.c source file.
+
   <LI> magick/texture.c (ConstituteTextureImage,TextureImage): Moved to
         new texture.c source file.
 
