@@ -95,7 +95,7 @@ returned image properties are similar to the texture image properties.</p>
 <div class="section" id="id1">
 <h2>Synopsis</h2>
 <pre class="literal-block">
-unsigned int TextureImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const <a class="reference external" href="../api/types.html#image">Image</a> *texture );
+MagickPassFail TextureImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const <a class="reference external" href="../api/types.html#image">Image</a> *texture );
 </pre>
 </div>
 <div class="section" id="id2">
@@ -106,7 +106,7 @@ alpha-composited &quot;under&quot; the image. MagickFail is returned if an error
 encountered.</p>
 <p>The format of the TextureImage method is:</p>
 <pre class="literal-block">
-unsigned int TextureImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const <a class="reference external" href="../api/types.html#image">Image</a> *texture );
+MagickPassFail TextureImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const <a class="reference external" href="../api/types.html#image">Image</a> *texture );
 </pre>
 <p>A description of each parameter follows:</p>
 <dl class="docutils">
@@ -120,7 +120,7 @@ unsigned int TextureImage( <a class="reference external" href="../api/types.html
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-09-15 21:10 UTC.
+Generated on: 2009-09-15 21:42 UTC.
 
 </div>
 </body>
